[package]
name = "rusty-map-view"
version = "0.1.0"
edition = "2021"

[dependencies]
ggez = "0.7"
parity-ws = "0.11"
json = "0.12"
nalgebra = "0.31"
nalgebra-glm = "0.17"
base64 = "0.13"
image = "0.24"
egui = "0.18"
ggez-egui = "0.2"

[profile.dev]
opt-level = 1

[profile.release]
incremental = true

[profile.release-lto]
inherits = "release"
incremental = false
lto = true